# K-means-algo-on-boost

./: CMakeLists.txt  Jamroot  Recmmendation.cpp  Recommendation.h  blogdata1.txt  cluster.cpp  main.cpp  main.h  main.py  playground.cpp  sandbox.py  util.cpp  util.h
BoostPythonPlayground/: example.cpp
ML/: .Jamroot.swp  Jamroot  ML.opensdf  ML.sln  ML.vcxproj  Recmmendation.cpp  Recommendation.cpp  Recommendation.h  cluster.cpp  cluster.h  ml_ext.pyd  util.cpp  util.h  x
ML/BoostPythonPlayground/: BoostPythonPlayground.vcxproj  playground.cpp
ML/BoostPythonPlayground/Debug/: vc140.idb
ML/BoostPythonPlayground/Debug/BoostPyt.5DC4945D.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog
ML/ML/: ML.vcxproj  ML.vcxproj.filters  Recmmendation.cpp  Recommendation.h  cluster.cpp  cluster.h  main.cpp  util.cpp  util.h
ML/Python/: Python.pyproj  main.py  playground.py  sandbox.py
Python/: Python.pyproj  clusters.py  downloadzebodata.py  generatefeedvector.py  main.py  recommendation.py  sandbox.py
ml-100k/: README
